syntax = "proto3";

package acafela.rpc;

option java_package = "com.acafela.harmony.userprofile";

import "Common.proto";


service UserProfile {
    rpc getVersion(Empty) returns (VersionInfo);

    rpc registerUser(RegisterParam) returns (RegisterResp);
    rpc changePassword(ChangePasswordParam) returns (Error);
    rpc restorePassword(RestorePasswordParam) returns (Error);
}

message VersionInfo {
    string version = 1;
}

message RegisterParam {
    string email_address = 1;
    string password = 2;
}

message RegisterResp {
    Error error = 1;
    string phone_number = 2;
}

message ChangePasswordParam {
    string email_address = 1;
    string old_password = 2;
    string new_password = 3;
}

message RestorePasswordParam {
    string email_address = 1;
    string phone_number = 2;
}
